# Proteus

./: .gitignore  LICENSE  Mejoras a hacer en Proteus.txt  Proteus.spec  README.md  proteus.bat  proteus.default.ini  proteus.ini  proteus.ps1  proteus.sh  prueba.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pytest_report.yaml
archetypes/i18n/: en_us.yaml  es_es.yaml  languages.xml
archetypes/icons/: icons.xml
plugins/basics/: __init__.py  proteus_xslt_basics.py
plugins/remus/: __init__.py  document_interactions.py  glossary_handler.py  traceability_matrix_helper.py
profile/: profile.ini
profiles/: Añadir nuevo arquetipo.txt
profiles/IR/: profile.ini
profiles/basic/: profile.ini
profiles/madeja_ir/: profile.ini
profiles/madeja_ir_english/: profile.ini
profiles/madeja_ir_spanish/: profile.ini
proteus/: __init__.py  __main__.py  app.py  config.py
proteus/application/: __init__.py  clipboard.py  config.py  events.py  metrics.py  request_interceptor.py  spellcheck.py  state_manager.py  state_restorer.py
proteus/controller/: __init__.py  command_stack.py
proteus/model/: __init__.py  abstract_object.py  archetype_manager.py  archetype_proxys.py  archetype_repository.py  object.py  project.py  property.py  template.py  trace.py
proteus/plugins/: __init__.py  proteus_xslt_basics.py
proteus/services/: __init__.py  archetype_service.py  project_service.py  render_service.py  service_manager.py
proteus/tests/: __init__.py  fixtures.py  test_archetype_manager.py  test_boolean_properties.py  test_date_properties.py  (+12 more)
(+1296 files in other folders)
